[gd_scene load_steps=12 format=2]

[ext_resource path="res://platformer-p15-assets/more fonts/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://platformer-p15-assets/more fonts/Downtown Elegance Bold Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://platformer-p15-assets/UI/grey_button04.png" type="Texture" id=3]
[ext_resource path="res://layers/Preview.png" type="Texture" id=6]
[ext_resource path="res://Pause.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 20
outline_color = Color( 0.32549, 0.372549, 0.466667, 1 )
extra_spacing_top = 10
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.466667, 0.537255, 0.501961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 30
outline_color = Color( 0.486275, 0.462745, 0.462745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Pause" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Pause"]
margin_left = -504.0
margin_top = -384.0
margin_right = 1728.0
margin_bottom = 1048.0
color = Color( 0.0898141, 0.203125, 0.0315399, 1 )

[node name="Preview" type="Sprite" parent="Pause/ColorRect"]
position = Vector2( 1140, 684 )
scale = Vector2( 1.65625, 2.20588 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Pause/ColorRect"]
margin_left = 647.0
margin_top = 427.0
margin_right = 1385.0
margin_bottom = 571.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.741176, 0.423529, 0.423529, 1 )
custom_colors/font_color_shadow = Color( 0.309804, 0.686275, 0.313726, 1 )
custom_fonts/font = SubResource( 1 )
text = "   PAUSED"

[node name="Panel" type="Panel" parent="Pause/ColorRect"]
modulate = Color( 0.819608, 0.819608, 0.819608, 0.741176 )
margin_left = 756.0
margin_top = 629.0
margin_right = 1280.0
margin_bottom = 916.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Pause/ColorRect/Panel"]
modulate = Color( 0.741176, 0.960784, 0.419608, 0.87451 )
margin_left = 120.0
margin_top = 32.0
margin_right = 423.0
margin_bottom = 98.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Pause/ColorRect/Panel"]
modulate = Color( 0.741176, 0.960784, 0.419608, 0.87451 )
margin_left = 121.0
margin_top = 110.0
margin_right = 424.0
margin_bottom = 176.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Pause/ColorRect/Panel"]
modulate = Color( 0.741176, 0.960784, 0.419608, 0.87451 )
margin_left = 122.0
margin_top = 185.0
margin_right = 425.0
margin_bottom = 251.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/ColorRect"]
anchor_left = 0.5
anchor_top = 0.622
anchor_right = 0.5
anchor_bottom = 0.622
margin_left = -233.0
margin_top = -219.704
margin_right = 57.0
margin_bottom = -16.7039
rect_clip_content = true
input_pass_on_modal_close_click = false
custom_constants/separation = 20

[node name="Restart1" type="Button" parent="Pause/ColorRect/VBoxContainer"]
margin_right = 290.0
margin_bottom = 54.0
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0.960784, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "RESTART"
flat = true

[node name="Resume" type="Button" parent="Pause/ColorRect/VBoxContainer"]
margin_top = 74.0
margin_right = 290.0
margin_bottom = 128.0
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.196078, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.913725, 1 )
custom_fonts/font = SubResource( 5 )
shortcut_in_tooltip = false
text = "RESUME"
flat = true

[node name="MainMenu" type="Button" parent="Pause/ColorRect/VBoxContainer"]
margin_top = 148.0
margin_right = 290.0
margin_bottom = 203.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.152941, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.854902, 1 )
custom_fonts/font = SubResource( 6 )
text = "MAIN MENU"
flat = true

[connection signal="pressed" from="Pause/ColorRect/VBoxContainer/Restart1" to="." method="_on_Restart1_pressed"]
[connection signal="pressed" from="Pause/ColorRect/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/ColorRect/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
